
2018-03-21  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* screenio.c (cob_convert_key): define ALT_DEL, ALT_HOME, ALT_END,
	  ALT_LEFT, ALT_RIGHT if they aren't defined already and map the
	  keys that were previously converted to use these

2018-03-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* screenio.c (field_accept): fixed bug #498 and ignore
	  COB_INSERT_MODE for fields with size 1

2018-03-17  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* screenio.c, common.h: fixed bug #500 CBL_READ_KBD_CHAR not
	  returning a value and characters being shown instead of hidden
	* screenio.c: added missing screenio initializations in external
	  library routines

2018-03-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c: added Tiny C version info
	* termio.c: renamed (clean_nan) to (clean_double) and let it
	  remove the leading zero from the exponent

2017-03-08  Ron Norman <rjn@inglenet.com>

	* termio.c: standardize DISPLAY of NaN (Not A Number)

2018-02-25  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c, coblocal.h (cob_get_dump_file): export for internal
	  call, only use trace file if dump file cannot be opened
	* termio.c (cob_dump_field): removed trailing spaces for group
	  items, get trace file from (cob_get_dump_file)
	* common.c, coblocal.h (cob_runtime_warning_external): new function
	* call.c: warnings centralized, msgids changed

2018-02-23  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c: cater for empty module_sources

2018-02-16  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* reportio.c: adjusted runtime error messages

2018-02-12  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c, coblocal.h: removed external_display_print_file as
	  cob_display_print_file is always external
	* common.c (cob_open_logfile): moved log file opening handling
	  code from cob_check_trace_file to new static function